RESOLVED FIXED108231
REGRESSION(r136324): Flexbox should relayout flex children when width changes
https://bugs.webkit.org/show_bug.cgi?id=108231
Summary REGRESSION(r136324): Flexbox should relayout flex children when width changes
Tony Chang
Reported 2013-01-29 14:48:26 PST
REGRESSION(r136324): Flexbox should relayout flex children when width changes
Attachments
Patch (4.93 KB, patch)
2013-01-29 14:50 PST, Tony Chang
no flags
Tony Chang
Comment 1 2013-01-29 14:50:50 PST
WebKit Review Bot
Comment 2 2013-01-30 11:22:58 PST
Comment on attachment 185312 [details] Patch Clearing flags on attachment: 185312 Committed r141290: <http://trac.webkit.org/changeset/141290>
WebKit Review Bot
Comment 3 2013-01-30 11:23:02 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.